--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <title>Meme Maker</title>
   </head>
   <body>
-    <canvas></canvas>
-    <input id="line-width" type="range" min="1" max="10" value="5" step="0.1" />
-    <input type="color" id="color" />
-    <div>
+    <div class="color-options">
+      <input type="color" id="color" />
       <div
         class="color-option"
         style="background-color: #1abc9c"
@@ -73,9 +71,26 @@
         data-color="#e67e22"
       ></div>
     </div>
-    <button id="mode-btn">Fill</button>
-    <button id="destroy-btn">Destroy</button>
-    <button id="eraser-btn">Erase</button>
+    <canvas></canvas>
+    <div class="btns">
+      <input
+        id="line-width"
+        type="range"
+        min="1"
+        max="10"
+        value="5"
+        step="0.1"
+      />
+      <button id="mode-btn">🧪 Fill</button>
+      <button id="destroy-btn">💣 Destroy</button>
+      <button id="eraser-btn">💨 Erase</button>
+      <label for="file">
+        🖼️ Add Photo
+        <input type="file" accept="image/*" id="file" />
+      </label>
+      <input type="text" placeholder="DBclick to input" id="text" />
+      <button id="save">💾 Save image</button>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
